# kitty-tools

./: .gitignore  CLAUDE.md  MANUAL_QA_CHECKLIST.md  README.md  clipboard-panel.html  clipboard-popup.html  components.json  floating.html  index.html  onboarding.html  package.json  pnpm-lock.yaml  region-select.html  release.config.json  settings.html  skills-lock.json  translate-floating.html  translate-region-select.html  tsconfig.json  vite.config.ts
.claude/: settings.json
.cursor/skills/: shadcn
.cursor/skills/generate-project-dev-standards/: SKILL.md
.cursor/skills/tauri-app-updater/: PROJECT.md  README.md  SKILL.md  pitfalls.md  reference.md
.cursor/skills/ui-ux-pro-max/: SKILL.md
.gitcode/workflows/: release.yml
.github/workflows/: ci.yml  release.yml
.windsurf/skills/shadcn/: SKILL.md  cli.md  customization.md  mcp.md
docs/: RELEASE.md
html/: clipboard-popup.html  floating.html  index.html  json-editor.html  launcher.html  onboarding.html  region-select.html  translate-workspace.html
releases/: latest.json
scripts/: generate-latest-json.mjs  gitcode-upload-release.mjs  release.mjs  updater-skill.mjs
scripts/lib/: project-version.mjs
skills/: README.md
skills/tauri-app-updater/: PROJECT.md  README.md  SKILL.md  pitfalls.md  reference.md
skills/tauri-app-updater/scripts/: generate-latest-json.mjs  git-push-all.mjs  gitcode-upload-release.mjs  github-upload-release.mjs  init-project.mjs  release.mjs  upload-release.mjs
skills/tauri-app-updater/templates/: package.json.scripts.snippet  release.config.json  updater-skill.mjs
src/: App.tsx  floating.tsx  main.tsx  onboarding.tsx  region-select.tsx  settings.tsx  translate-workspace.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  app_updater.rs  baidu_creds.rs  config.rs  config_sqlite.rs  hotkeys.rs  lang_detect.rs  lib.rs  mac_input.rs  main.rs  ocr.rs  screenshot.rs  screenshot_macos_sck.rs  selection.rs  tray.rs  win32_sysmenu.rs  win_input.rs  window.rs  youdao.rs
src-tauri/src/clipboard/: app_icon.rs  history_db.rs  image_cache.rs  limits.rs  mac_access.rs  mod.rs  paste.rs  source.rs  watcher.rs  win_access.rs
src-tauri/src/features/clipboard_history/: mod.rs
src-tauri/src/features/translate/: baidu_creds.rs  clipboard.rs  config.rs  config_sqlite.rs  lang_detect.rs  main.rs  mod.rs  ocr.rs  screenshot.rs  translate.rs  youdao.rs
src-tauri/src/launcher/: bookmarks.rs  files.rs  fuzzy.rs  installed_apps.rs  mod.rs  recency.rs  system_apps.rs  uwp.rs
src-tauri/src/translate/: api.rs
src/app/: App.tsx  CommonSettingsPanel.tsx  OnboardingApp.tsx  WorkspaceApp.tsx  main.tsx
src/app/boot/: clipboard-panel.tsx  main.tsx  onboarding.tsx  translate-floating.tsx  translate-region-select.tsx
src/app/clipboard/: main.tsx
src/app/hooks/: useWorkspaceSettings.ts
src/app/json-editor/: main.tsx
src/app/launcher/: main.tsx
src/app/onboarding/: main.tsx
src/app/region-select/: main.tsx
src/app/translate-workspace/: main.tsx
src/assets/styles/: json-editor-overrides.css
src/clipboard-popup/: main.tsx
src/clipboard/hooks/: useClipboard.ts
src/components/CustomColorPicker/: index.tsx
src/components/json-editor/: lazyVanillaJsonEditor.ts
src/components/onboarding/: WelcomeOnboarding.tsx
src/components/settings/: SettingsPanel.tsx  constants.ts
src/components/shared/: GlobalToaster.tsx
src/components/translate/: FloatingResult.tsx  RegionSelect.tsx  TranslatePanel.tsx
src/components/ui/: alert-dialog.tsx  context-menu.tsx  input.tsx  kbd.tsx  popover.tsx  scroll-area.tsx  select.tsx  skeleton.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/features/clipboard-history/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/features/translate/: App.tsx  floating.tsx  (+4 more)
src/hooks/: ConfigProvider.tsx  config-context.ts  useAppConfig.ts  useAppConfig.tsx  useAppUpdater.ts  useClipboard.ts  useKittyIsDarkMode.ts  useStartupUpdateCheck.ts  useSystemPrefersDark.ts  useTauriEvent.ts  useTheme.ts  useTranslate.ts
src/lib/: app-meta.ts  app-updater-pending.ts  app-updater.ts  clipboard-history-import.ts  clipboard-history-worker.ts  cloud-sync.ts  color.ts  copy-text.ts  feature-catalog.ts  file-icons.ts  format-bytes.ts  invoke-helpers.ts  json-editor-i18n.ts  json-editor-inject-overrides.ts  json-editor-prefs.ts  json-editor.ts  launcherFilePrefix.ts  platform.ts  read-text.ts  shortcuts.ts  sourceAppIconCache.ts  theme.ts
src/onboarding/: main.tsx
src/region-select/: main.tsx
src/services/: clipboard-history-db.ts  database.ts
src/translate-workspace/: main.tsx
src/types/: features.ts  index.ts  json-editor.ts
(+179 files in other folders)
