[package]
name = "kitty-tools"
version = "0.1.0"
description = "Kitty Tools - Clipboard History & Translation"
authors = ["you"]
edition = "2021"

[lib]
name = "kitty_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Clipboard
arboard = "3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "tiff"] }
png = "0.17"
base64 = "0.22"

# Translate
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
# 仅启用 HTTP/插件/sqlx/启动器 spawn_blocking 等所需子系统，避免 `full` 带来的多余代码
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "time",
  "net",
  "io-util",
  "sync",
  "fs",
] }
md5 = "0.7"
sha2 = "0.10"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
screenshots = "0.8"
lingua = { version = "1.8.0", default-features = false, features = [
    "chinese",
    "english",
    "french",
    "german",
    "italian",
    "japanese",
    "korean",
    "portuguese",
    "russian",
    "spanish",
] }
dirs = "6"
walkdir = "2"
rayon = "1.10"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows-icons = "0.3.0"
windows = { version = "0.61.3", features = [
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# ScreenCaptureKit：单次整桌截屏（15.2+），显著快于 CGWindowList；与常见翻译工具路径一致
screencapturekit = { version = "1.5.4", features = ["macos_15_2"] }
libc = "0.2"
core-graphics = "0.25"
dispatch = "0.2"
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["NSPasteboard", "NSRunningApplication", "NSWorkspace", "NSImage", "libc"] }
objc2-foundation = { version = "0.2.2", features = ["NSArray", "NSObject", "NSString", "NSURL", "NSData"] }
